# Math_Utils

./: CMakeLists.txt  Makefile  README.md  math_utils.c  math_utils.h
docs/: Doxifile  Doxyfile
tests/: CMakeLists.txt  tests.c
